--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
         <a class="logotyp" href="index.html">Web<span>Studio</span></a>
         <nav class="navigation">
             <ul class="main-nav">
-                <li class="item"><a class="nav-link-active" href="index.html">Студия</a></li>
-                <li class="item"><a class="nav-link" href="portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="nav-link" href="index.html">Студия</a></li>
+                <li class="item"><a class="nav-link-active" href="portfolio.html">Портфолио</a></li>
                 <li class="item"><a class="nav-link" href="index.html">Контакты</a></li>
             </ul>
         </nav>
